# debugger_linux_lkm

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  lkmdbg.c  lkmdbg_debugfs.c  lkmdbg_internal.h  lkmdbg_ioctl.h  lkmdbg_main.c  lkmdbg_mem.c  lkmdbg_session.c  lkmdbg_symbols.c  lkmdbg_transport_proc.c
.github/docker/ci/: Dockerfile
.github/scripts/: qemu-smoke-init.c  qemu-smoke-init.sh  qemu-watchpoint-control.c
.github/workflows/: android-build.yml  build.yml  ci-image.yml  oneplus-sm8550-ace2pro-a13-gki515.yml
android/: gradle.properties  settings.gradle.kts
android/agent/: CMakeLists.txt
android/agent/src/main/cpp/: lkmdbg_agent_protocol.h  main.cpp
android/app/: build.gradle.kts  proguard-rules.pro
android/app-data/: build.gradle.kts
android/app-data/src/main/java/com/smlc666/lkmdbg/data/: BridgeDataHelpers.kt  BundledAgentInstaller.kt  MemoryEditorController.kt  MemoryPreviewBuilder.kt  MemorySearchCoordinator.kt  MemorySearchSnapshotController.kt  MemoryValueCodec.kt  NativeAssembler.kt  PipeAgentClient.kt  ProcessCatalog.kt  SessionBridgeRepository.kt  SessionBridgeUnsafeOps.kt  SessionOperationRunner.kt  SessionThreadController.kt
android/app-data/src/main/res/drawable/: ic_lkmdbg_radar.xml  ic_lkmdbg_terminal.xml
android/app-data/src/main/res/values/: colors.xml  strings.xml
android/app-domain/: build.gradle.kts
android/app-domain/src/main/java/com/smlc666/lkmdbg/data/: MemorySearchModels.kt  ProcessModels.kt  SessionBridgeStateModels.kt  WorkspaceModels.kt
android/app-ui/: build.gradle.kts
android/app/signing/: lkmdbg-debug.p12
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/fonts/: NOTICE.txt
android/app/src/main/cpp/: CMakeLists.txt  native_disassembler.cpp  native_workspace_renderer.cpp
android/app/src/main/cpp/nativeui/: egl_window_context.cpp  egl_window_context.h  imgui_controls.cpp  imgui_controls.h  imgui_workspace_renderer.cpp  imgui_workspace_renderer.h  native_workspace_jni.cpp  ui_animation.h  ui_format.cpp  ui_format.h  ui_tree.cpp  ui_tree.h  workspace_animation.cpp  workspace_animation.h  workspace_layout.cpp  workspace_layout.h  workspace_state.h  workspace_theme.cpp  workspace_theme.h  workspace_view_model.cpp  workspace_view_model.h
android/app/src/main/java/com/smlc666/lkmdbg/: CrashLogger.kt  LkmdbgApplication.kt  MainActivity.kt
android/app/src/main/java/com/smlc666/lkmdbg/data/: MemoryEditorController.kt  MemoryPreviewModels.kt  MemorySearchCoordinator.kt  MemorySearchEngine.kt  MemorySearchModels.kt  NativeDisassembler.kt  PipeAgentClient.kt  ProcessCatalog.kt  RootBridgeDiagnostics.kt  SessionBridgeController.kt  SessionBridgeRepository.kt  SessionBridgeUnsafeOps.kt  SessionOperationRunner.kt  SessionThreadController.kt  WorkspaceModels.kt
android/app/src/main/java/com/smlc666/lkmdbg/nativeui/: MemoryWorkspaceViewMode.kt  NativeFontCatalog.kt  NativeWorkspaceAction.kt  NativeWorkspaceBridge.kt  NativeWorkspaceSnapshot.kt  NativeWorkspaceStrings.kt  NativeWorkspaceTextureView.kt
android/app/src/main/java/com/smlc666/lkmdbg/overlay/: LkmdbgOverlayService.kt  OverlayGestureController.kt  OverlayHeaderController.kt  OverlayMemoryToolboxController.kt  OverlayPermission.kt  OverlayProcessPickerController.kt  OverlaySavedStateOwner.kt  OverlayStateBinder.kt  OverlayWindowController.kt  OverlayWorkspace.kt  OverlayWorkspaceActionController.kt
android/app/src/main/res/drawable/: ic_lkmdbg_cpu.xml  ic_lkmdbg_search.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/buildSrc/src/main/kotlin/com/smlc666/gradle/: BuildBundledAgentTask.kt
android/gradle/: libs.versions.toml
core/: lkmdbg_hook_registry.c  lkmdbg_main.c  lkmdbg_protect.c  lkmdbg_runtime_hooks.c  lkmdbg_stealth.c  lkmdbg_symbols.c
docs/: return_to_user_freeze_eval.md
docs/superpowers/plans/: 2026-04-13-android-refactor-implementation.md  2026-04-14-android-memory-workspace-implementation.md
docs/superpowers/specs/: 2026-04-13-android-refactor-design.md  2026-04-14-android-memory-workspace-design.md
hook/: lkmdbg_hook_arm64.c  lkmdbg_hook_internal.h
include/: lkmdbg_compat.h  lkmdbg_hook.h  lkmdbg_internal.h  lkmdbg_ioctl.h
input/: lkmdbg_input.c
mem/: lkmdbg_image.c  lkmdbg_mem.c  lkmdbg_phys.c  lkmdbg_pte.c  lkmdbg_remote_alloc.c  lkmdbg_remote_map.c  lkmdbg_target.c  lkmdbg_target_vm.c  lkmdbg_view_region.c  lkmdbg_vma.c
task/: lkmdbg_freeze.c  lkmdbg_remote_call.c  lkmdbg_thread.c  lkmdbg_thread_ctrl.c  lkmdbg_thread_trace.c
tools/: lkmdbg_input_ctl.c  lkmdbg_mem_test.c  lkmdbg_mmu_test.c  lkmdbg_open_session.c  lkmdbg_stealth_ctl.c  lkmdbg_sysrule_ctl.c
tools/driver/: bridge_c.c  bridge_c.h  bridge_control.c  bridge_control.h  bridge_events.c  bridge_events.h  bridge_memory.c  bridge_memory.h  common.hpp  driver.cpp  driver.hpp  events.cpp  events.hpp  memory.cpp  memory.hpp  session.cpp  session.hpp
tools/examples/: example_mem_rw.c  example_perf_baseline.c  example_phys_translate_read.c  example_regs_fp.c  example_remote_alloc_rw.c  example_session_status.c  example_stealth_roundtrip.c  example_sysrule_combo.c  example_threads_query.c  example_throughput_compare.c  example_view_external_read.c  example_view_wxshadow_exec.c  example_vma_page_query.c
transport/: lkmdbg_session.c  lkmdbg_session_core.c  lkmdbg_transport_proc.c
ui/: lkmdbg_debugfs.c
(+95 files in other folders)
