cmake_minimum_required(VERSION 3.22.1)

project(lkmdbg_native LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CAPSTONE_BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(CAPSTONE_BUILD_STATIC_LIBS ON CACHE BOOL "" FORCE)
set(CAPSTONE_BUILD_CSTOOL OFF CACHE BOOL "" FORCE)
set(CAPSTONE_BUILD_CSTEST OFF CACHE BOOL "" FORCE)
set(CAPSTONE_BUILD_LEGACY_TESTS OFF CACHE BOOL "" FORCE)
set(CAPSTONE_INSTALL OFF CACHE BOOL "" FORCE)
set(CAPSTONE_ARCHITECTURE_DEFAULT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_AARCH64_SUPPORT ON CACHE BOOL "" FORCE)

set(CAPSTONE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../third_party/capstone)
add_subdirectory(${CAPSTONE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/capstone)

add_library(lkmdbg_native SHARED native_disassembler.cpp)
target_compile_definitions(lkmdbg_native PRIVATE CAPSTONE_STATIC)
target_link_libraries(lkmdbg_native PRIVATE capstone_static log)
